data/derived/sp14/progs/unify/prog0475.ml.out
Characters 43-52:
  if n > 0 then x::clone(x (n-1))
                        ^^^^^^^^^
Error: This expression has type 'a but an expression was expected of type
         int -> 'a
       The type variable 'a occurs inside int -> 'a
